# DeckForge

./: .gitignore  LICENSE  README.md  README_zh.md  README_zh_TW.md  pyproject.toml
examples/: sample_presentation.md
src/deckforge/: __init__.py  cli.py  engine.py
src/deckforge/llm/: __init__.py  base.py  claude_backend.py  deepseek_backend.py  ollama_backend.py  openai_backend.py
src/deckforge/parsers/: __init__.py  content_parser.py  markdown_parser.py
src/deckforge/renderers/: __init__.py  pptx_renderer.py
src/deckforge/themes/: __init__.py  manager.py
tests/: test_content_parser.py  test_engine.py  test_markdown_parser.py  test_pptx_renderer.py  test_theme_manager.py
